# wraquant

./: .env.example  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml  pyproject.toml  pyproject.toml.xwn26zae
.claude/: agents.md
.claude/skills/: audit.md  test.md
.github/workflows/: changelog.yml  coverage.yml  docs.yml  lint.yml  publish.yml  tests.yml
.trunk/: trunk.yaml
docs/: Makefile  changelog.rst  conf.py  getting_started.rst  index.rst  mcp.rst  requirements.txt
docs/_internal/: APPLICATION_INTEGRATION_PLAN.md  ARCHITECTURE.md  COERCION_ADOPTION_STATUS.md  INDEX.md  INTEGRATION_DEBT.md  INTEGRATION_INDEX.md  INTEGRATION_PLAN.md  MASTER_PLAN.md  MCP_DEFINITIVE_ARCHITECTURE.md  MCP_STATE_ARCHITECTURE.md  MCP_TODO.md  MODULE_GRAPH.md  MODULE_STATUS.md  MONOREPO_STRUCTURE.md  NEXT_SESSION_PRIORITIES.md  SESSION_SUMMARY.md  TYPE_SYSTEM_ANALYSIS.md  TYPE_SYSTEM_PLAN.md  WRAFIN_REFACTOR_CONSIDERATION.md  wraquant-mcp-design.md
docs/_static/: custom.css
docs/api/: backtest.rst  bayes.rst  causal.rst  core.rst  data.rst  econometrics.rst  execution.rst  forex.rst  fundamental.rst  index.rst  io.rst  math.rst  microstructure.rst  ml.rst  news.rst  opt.rst  price.rst  recipes.rst  regimes.rst  risk.rst  stats.rst  ta.rst  ts.rst  viz.rst  vol.rst
docs/tutorials/: backtesting_strategies.rst  index.rst  ml_alpha_research.rst  portfolio_construction.rst  regime_investing.rst  risk_analysis.rst  volatility_modeling.rst
examples/: 01_getting_started.py  02_statistics.py  03_risk_management.py  04_portfolio_optimization.py  05_options_pricing.py  06_backtesting.py  07_time_series.py  08_forex.py  09_microstructure_execution.py  10_advanced_math.py  11_integrated_workflows.py  fundamental_analysis.py  mcp_workflows.md  ml_alpha.py  pairs_trading.py  risk_analysis.py  stock_screener.py
mcp/: README.md  pyproject.toml
mcp/examples/: claude_desktop_config.json  equity_analysis.md  portfolio_construction.md
mcp/src/wraquant_mcp/: __init__.py  __main__.py  adaptor.py  auto_register.py  context.py  ids.py  server.py  supervisor.py  workspace.py
mcp/src/wraquant_mcp/prompts/: __init__.py  analysis.py  bayes.py  data.py  econometrics.py  execution.py  forex.py  fundamental.py  math.py  ml.py  portfolio.py  pricing.py  regime.py  reporting.py  risk.py  strategy.py  system.py  tools_guide.py
mcp/src/wraquant_mcp/servers/: __init__.py  backtest.py  bayes.py  causal.py  data.py  econometrics.py  execution.py  experiment.py  forex.py  fundamental.py  math.py  microstructure.py  ml.py  news.py  opt.py  price.py  regimes.py  risk.py  stats.py  ta.py  ts.py  viz.py  vol.py
mcp/tests/: test_adaptor.py  test_backtest_server.py  test_bayes_server.py  test_causal_server.py  test_context.py  test_data_server.py  test_e2e.py  test_econometrics_server.py  test_execution_server.py  test_experiment_server.py  test_forex_server.py  test_fundamental_server.py  test_math_server.py  test_microstructure_server.py  test_ml_server.py  test_news_server.py  test_opt_server.py  test_price_server.py  test_regimes_server.py  test_risk_server.py  test_servers.py  test_stats_server.py  test_supervisor.py  test_ta_server.py  test_ts_server.py  test_viz_server.py  test_vol_server.py  test_workspace.py
src/wraquant/: __init__.py  _compat.py  _lazy.py  compose.py  recipes.py
tests/: conftest.py  test_compose.py  test_integration.py  test_recipes.py
tests/backtest/: test_engine.py  test_events.py  test_integrations.py  test_metrics.py  test_position.py  test_tearsheet.py
tests/bayes/: test_integrations.py  test_integrations_extended.py  test_mcmc.py  test_models.py
tests/causal/: test_integrations.py  test_treatment.py
tests/core/: test_coerce.py  test_config.py  test_decorators.py  test_exceptions.py  test_results.py  test_types.py
tests/dashboard/: test_dashboard.py
tests/data/: test_cache.py  test_cleaning.py  test_cleaning_advanced.py  test_registry.py  test_transforms.py  test_utils.py  test_validation.py  test_validation_advanced.py
tests/econometrics/: test_cross_section.py  test_diagnostics.py  test_event_study.py  test_panel.py  test_timeseries.py  test_volatility.py
tests/execution/: test_algorithms.py  test_cost.py  test_optimal.py
tests/experiment/: test_grid.py  test_lab.py  test_sensitivity.py  test_tracker.py  test_walk_forward.py
tests/flow/: test_flow.py
tests/forex/: test_analysis.py  test_carry.py  test_pairs.py
tests/frame/: test_base.py  test_factory.py  test_ops.py
tests/fundamental/: test_financials.py  test_ratios.py  test_screening.py  test_valuation.py
tests/io/: test_export.py  test_files.py  test_streaming.py
tests/math/: test_ergodicity.py  test_hawkes.py  test_information.py  test_levy.py  test_network.py  test_numerical.py  test_optimal_stopping.py  test_signals.py  test_spectral.py
tests/microstructure/: test_liquidity.py  test_market_quality.py  test_toxicity.py
tests/ml/: test_advanced.py  test_clustering.py  test_deep.py  test_evaluation.py  test_features.py  test_online.py  test_pipeline.py  test_preprocessing.py
tmp/: fmp_endpoints_discovered.json  fmp_full_catalog.json
tmp/fmp_docs_compiler/: README.md  pyproject.toml
tmp/fmp_docs_compiler/examples/fixture_build/: openapi.json  tools.json
tmp/fmp_docs_compiler/examples/fixture_build/generated_wrapper/: README.md  __init__.py  app.py  combined_app.py  mcp_auto.py  mcp_manual.py  models.py  settings.py  upstream.py
tmp/fmp_docs_compiler/examples/fixture_catalog/: catalog.json  manifest.json
tmp/fmp_docs_compiler/src/fmp_docs_compiler/: __init__.py  __main__.py  cache.py  cli.py  compiler.py  discovery.py  generator_fastapi.py  generator_mcp.py  generator_openapi.py  generator_tools.py  http.py  io_utils.py  models.py  normalizer.py  parser.py  verify.py
tmp/fmp_docs_compiler/tests/: test_cli.py  test_discovery.py  test_e2e_pipeline.py  test_generator_fastapi.py  test_parser.py
tmp/fmp_docs_compiler/tests/fixtures/site/: available-countries.html  available-sectors.html  index.html  latest-sec-filings.html  symbol-search.html
(+334 files in other folders)
