[project]
name = "wraquant-mcp"
version = "0.1.0"
description = "MCP server for wraquant — quant analysis engine for AI agents"
authors = [
  { name = "William Astley", email = "william.astley@algebraicwealth.com" },
]
dependencies = [
  "wraquant>=0.1.1",
  "fastmcp>=3.2.0",
  "duckdb>=1.5.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "quantitative-finance", "ai-agents", "fastmcp", "duckdb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/pr1m8/wraquant"
Repository = "https://github.com/pr1m8/wraquant/tree/main/mcp"

[project.scripts]
wraquant-mcp = "wraquant_mcp:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
